tests/NormalTests/paczka1/fuzzy1/51666298.err
Error in line 2: vcGcY5B4 S886 29,4
Error in line 4: vcGcY5B4 S237 73,6
Error in line 1: A690 S33 11,6
Error in line 6: vcGcY5B4 A690 65,4
Error in line 20: 8HgA A690 47,8
Error in line 27: vcGcY5B4 S886 187,99
Error in line 39: UTAjYn S237 50,4
